# tinyrender

./: CMakeLists.txt  Camera.h  Device.h  FrameBuffer.h  Framerbuffer.cpp  Input.h  M_Camera.h  M_Shader.h  README.md  Shader.h  base.h  geometry.h  glFunction.h  macro.h  main.cpp  model.cpp  model.h  myGL.h  note.md  pch.h  tgaimage.cpp  tgaimage.h
App/: Application.cpp  Application.h  Device.cpp  Device.h  Record.cpp  Record.h
Graphics/: Draw.h  Graphics.cpp  Graphics.h  Perframe.cpp  Perframe.h  Program.cpp  Program.h  Shader.cpp  Shader.h
UI/: Inspector.h  RenderWindow.cpp  RenderWindow.h
base/: Cache.cpp  Cache.h  Camera.cpp  Camera.h  Image.cpp  Image.h  Material.h  Modal.cpp  Modal.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Util.cpp  Util.h  darray.cpp  darray.h  framebuffer.cpp  framebuffer.h  graphics.h  maths.cpp  maths.h  mesh.cpp  mesh.h  platform.h
include/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl
